# Podcast-TUI

./: Cargo.toml  README.md  install.sh
.claude/: settings.local.json
src/: app.rs  config.rs  events.rs  main.rs
src/download/: mod.rs
src/player/: mod.rs
src/rss/: mod.rs  types.rs
src/ui/: episodes.rs  feeds.rs  mod.rs  player.rs
