[package]
name = "podcast-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal podcast player"

[[bin]]
name = "podcast-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
